login: Seperate social login button area

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -1460,7 +1460,6 @@
     }
 
     .act-row {
-        margin-bottom: 42px;
         line-height:22px;
         overflow:auto;
     }
@@ -1470,6 +1469,16 @@
         text-align:center;
         margin:0px auto 20px;
     }
+
+    .social-login-title {
+        font-size: 14px;
+        padding-top: 10px;
+    }
+    .social-login-title-line {
+        margin-top: 12px;
+        margin-bottom: 10px;
+    }
+;
 }
 
 //---- sign up
@@ -6139,7 +6148,6 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
         .yobicon-error { vertical-align: middle; margin-right:5px; font-size:13px; }
     }
     .act-row {
-        margin-bottom:20px;
         input.checkbox { margin-top:4px !important; }
         label.bg-checkbox { display:inline-block; }
     }
