--- a/app/views/common/loginDialog.scala.html
+++ b/app/views/common/loginDialog.scala.html
@@ -8,6 +8,12 @@
 @()
 @import com.feth.play.module.pa.views.html._
 @import utils.TemplateHelper._
+@import org.apache.commons.lang3.StringUtils
+
+@isSocialLoginSupport = @{
+  val allowedProviders = play.Configuration.root.getString("application.social.login.support", "").replaceAll(" ", "").split(",")
+  allowedProviders.nonEmpty && StringUtils.isNotBlank(allowedProviders(0))
+}
 
 <div id="loginDialog" class="modal hide loginDialog" tabindex="-1" role="dialog">
   <div class="modal-body">
@@ -42,6 +48,11 @@
       <div class="btns-row nm">
         @currentAuth() { auth =>
           @if(auth == null) {
+            @if(isSocialLoginSupport) {
+              @if(!UserApp.useSocialLoginOnly) {
+                <div class="social-login-title-line"> @Messages("title.or") </div>
+              }
+            }
             @forProviders() { p =>
               @if(isAllowedOAuthProvider(p.getKey)) {
                 <a href="@p.getUrl" class="ybtn oauth-login-btn">@Html(providerWithLogo(p.getKey))</a>
