--- a/app/views/project/create.scala.html
+++ b/app/views/project/create.scala.html
@@ -158,27 +158,27 @@
             </div>
             <div class="span10">
                 <label for="menuSettingCode" class="bg-radiobtn label-public inline-list">
-                  <input type="checkbox" class="radio-btn" id="menuSettingCode" name="code" value="true" checked="checked">
+                  <input type="checkbox" class="radio-btn" id="menuSettingCode" name="code" @if(containsInDefaultMenus("code")){value="true" checked} >
                   @Messages("menu.code")
                 </label>
                 <label for="menuSettingIssue" class="bg-radiobtn label-public inline-list">
-                  <input type="checkbox" class="radio-btn" id="menuSettingIssue" name="issue" value="true" checked="checked">
+                  <input type="checkbox" class="radio-btn" id="menuSettingIssue" name="issue" @if(containsInDefaultMenus("issue")){value="true" checked} >
                   @Messages("menu.issue")
                 </label>
                 <label for="menuSettingPullRequest" class="bg-radiobtn label-public inline-list">
-                  <input type="checkbox" class="radio-btn" id="menuSettingPullRequest" name="pullRequest" value="true" checked="checked">
+                  <input type="checkbox" class="radio-btn" id="menuSettingPullRequest" name="pullRequest" @if(containsInDefaultMenus("pullRequest")){value="true" checked} >
                   @Messages("menu.pullRequest")
                 </label>
                 <label for="menuSettingReview" class="bg-radiobtn label-public inline-list">
-                  <input type="checkbox" class="radio-btn" id="menuSettingReview" name="review" value="true" checked="checked">
+                  <input type="checkbox" class="radio-btn" id="menuSettingReview" name="review" @if(containsInDefaultMenus("review")){value="true" checked} >
                   @Messages("menu.review")
                 </label>
                 <label for="menuSettingMilestone" class="bg-radiobtn label-public inline-list">
-                  <input type="checkbox" class="radio-btn" id="menuSettingMilestone" name="milestone" value="true" checked="checked">
+                  <input type="checkbox" class="radio-btn" id="menuSettingMilestone" name="milestone" @if(containsInDefaultMenus("milestone")){value="true" checked} >
                   @Messages("milestone")
                 </label>
                 <label for="menuSettingBoard" class="bg-radiobtn label-public inline-list">
-                  <input type="checkbox" class="radio-btn" id="menuSettingBoard" name="board" value="true" checked="checked">
+                  <input type="checkbox" class="radio-btn" id="menuSettingBoard" name="board" @if(containsInDefaultMenus("board")){value="true" checked} >
                   @Messages("menu.board")
                 </label>
             </div>
