my-issues: Support favorite projects listing

--- a/app/assets/stylesheets/less/_override.less
+++ b/app/assets/stylesheets/less/_override.less
@@ -388,3 +388,30 @@ input:-webkit-autofill {
         }
     }
 }
+
+.myissues {
+    .project-owner{
+        display: none;
+    }
+    .user-ul {
+        .favored {
+            border-bottom: 1px solid #eee;
+        }
+    }
+
+    .site-logo {
+        display: none;
+    }
+    .star-project {
+        display: none;
+    }
+  .project-item {
+      padding: 0 10px;
+      .project-name {
+          max-width: 150px;
+      }
+  }
+  .no-result {
+      display: none;
+  }
+}
