--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -6863,3 +6863,7 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
     box-shadow: 2px 2px 8px #000;
     background: #FFF url('/assets/images/loading-gif-2.gif') no-repeat center;
 }
+
+.myissues-search-input {
+    margin: 20px 0 20px;
+}
