--- a/app/views/issue/my_partial_search.scala.html
+++ b/app/views/issue/my_partial_search.scala.html
@@ -4,6 +4,7 @@
 * Copyright Yona & Yobi Authors & NAVER Corp.
 * https://yona.io
 **@
+@import java.util
 @(title: String, currentPage: com.avaje.ebean.Page[Issue], param:models.support.SearchCondition, project:Project)
 
 @import helper._
@@ -24,8 +25,6 @@
         <div class="inner advanced">
             @my_partial_list_quicksearch(param)
 
-            <hr class="hide-in-mobile">
-
             <form id="search" name="search" action="@routes.IssueApp.userIssues()" method="get">
                 <input type="hidden" name="orderBy" value="@param.orderBy">
                 <input type="hidden" name="orderDir" value="@param.orderDir">
@@ -34,9 +33,9 @@
                 <input type="hidden" name="commenterId" value="@param.commenterId" data-search="commenterId">
                 <input type="hidden" name="assigneeId" value="@param.assigneeId" data-search="assigneeId">
                 <input type="hidden" name="mentionId" value="@param.mentionId" data-search="mentionId">
-                <div class="search">
+                <div class="search myissues-search-input">
                     <div class="search-bar">
-                        <input name="filter" class="textbox full" type="text" value="@param.filter">
+                        <input name="filter" class="textbox full" type="text" value="@param.filter" placeholder="@Messages("issue.search")">
                         <button type="submit" class="search-btn"><i class="yobicon-search"></i></button>
                     </div>
                 </div>
@@ -50,6 +49,9 @@
                     }
                 }
             }
+        </div>
+        <div class="user-project-list myissues">
+        @views.html.index.displayProjectsWithFavored("recentlyVisited", new util.ArrayList(),  UserApp.currentUser().getFavoriteProjects, true)
         </div>
     </div>
     <div class="span10 span-hard-wrap" id="span10">
