my-issues: Change owner name min width

--- a/app/assets/stylesheets/less/_override.less
+++ b/app/assets/stylesheets/less/_override.less
@@ -390,9 +390,6 @@ input:-webkit-autofill {
 }
 
 .myissues {
-    .project-owner{
-        display: none;
-    }
     .user-ul {
         .favored {
             border-bottom: 1px solid #eee;
@@ -409,6 +406,10 @@ input:-webkit-autofill {
       padding: 0 10px;
       .project-name {
           max-width: 150px;
+      }
+      .project-owner{
+          padding-right: 0;
+          max-width: 60px;
       }
   }
   .no-result {
