--- a/app/assets/stylesheets/less/_usermenu.less
+++ b/app/assets/stylesheets/less/_usermenu.less
@@ -478,7 +478,9 @@
       flex-shrink: 3;
       text-overflow: ellipsis;
       overflow: hidden;
+      white-space: nowrap;
       max-width: 100px;
+      min-width: 40px;
       a {
         &:hover {
           text-decoration: underline;
