font: Match the default font to Github

--- a/app/assets/stylesheets/less/_variables.less
+++ b/app/assets/stylesheets/less/_variables.less
@@ -9,7 +9,7 @@
 @base-webfont-path: "../images/webfont";
 
 // Typography
-@base-font-family: "Noto Sans", "New Roboto", "Helvetica Neue", "Helvetica", "Apple SD Gothic Neo", "Arial", "나눔고딕", "NanumGothic", "NanumGothicOTF", "맑은 고딕", -apple-system, BlinkMacSystemFont, sans-serif;
+@base-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 @fixed-font-family: Consolas, "Menlo", "Monaco", "Ubuntu Mono",  "source-code-pro", monospace;
 
 @base-font-size  : 13px;
