--- a/app/assets/stylesheets/less/_common.less
+++ b/app/assets/stylesheets/less/_common.less
@@ -9,7 +9,7 @@ body {
    text-rendering: auto !important;
 }
 
-input, textarea { font-family: @fixed-font-family !important; }
+textarea { font-family: @fixed-font-family !important; }
 button, select { font-family: @base-font-family !important; }
 h1,h2,h3,h4,h5,h6 { text-rendering:auto !important; }
 
