project: Make project enroll request button bigger

--- a/app/views/project/header.scala.html
+++ b/app/views/project/header.scala.html
@@ -93,7 +93,7 @@
                         </div>
                         } else {
                         <button class="ybtn ybtn-small dropdown-toggle" type="button" data-toggle="dropdown">
-                            <i class="yobicon-addfriend"></i>
+                            <i class="yobicon-addfriend"> @Messages("organization.member.enrollment.title")</i>
                         </button>
                         <div class="dropdown-menu flat right title">
                             <div class="pop-title">@Messages("project.you.may.want.to.be.a.member", project)</div>
