project: Show group project marker

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -6865,3 +6865,11 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
 .myissues-search-input {
     margin: 20px 0 20px;
 }
+
+.project-protected {
+    background-color: #00bcd4;
+    border-radius: 2px;
+    font-size: 15px;
+    color: rgba(0, 0, 0, 0.7);
+    padding: 0 2px;
+}
