site-admin: Support user mode change - guest/normal

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -4936,12 +4936,17 @@ label.issue-item-row {
         }
 
         .listitem-col {
-            padding: 5px 10px;
-            overflow: hidden;
+            font-size: 12px;
+            padding: 10px 0;
             text-overflow: ellipsis;
-            white-space: nowrap;
             word-break : break-all;
-            line-height: 50px;
+            line-height: 20px;
+            .user-id {
+                font-size: 12px;
+            }
+            .email {
+                font-size: 13px;
+            }
         }
 
         &:nth-child(even) {
