site-admin: Update guest user list css

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -4942,10 +4942,18 @@ label.issue-item-row {
             word-break : break-all;
             line-height: 20px;
             .user-id {
-                font-size: 12px;
+                font-size: 13px;
             }
             .email {
                 font-size: 13px;
+                line-height: 43px;
+            }
+            .created-date {
+                padding: 0;
+                line-height: 30px;
+            }
+            &.action-buttons {
+                padding-top: 0;
             }
         }
 
