--- a/app/views/site/projectList.scala.html
+++ b/app/views/site/projectList.scala.html
@@ -10,6 +10,7 @@
 @import utils.JodaDateUtil._
 
 @siteMngLayout(message) {
+    <div class="title_area">
         <h2 class="pull-left">@Messages("site.sidebar.projectList")</h2>
         <form class="form-search pull-right" action="@routes.SiteApp.projectList()">
             <div class="search-bar">
