fix: admin project list page 의 header 내용을 컨텐츠와 맞춤

--- a/app/views/site/projectList.scala.html
+++ b/app/views/site/projectList.scala.html
@@ -23,10 +23,13 @@
         <div class="span5 listhead-title">
             <strong>@Messages("project.name")</strong>
         </div>
-        <div class="span5 listhead-title">
+        <div class="span4 listhead-title">
             <strong>@Messages("project.description")</strong>
         </div>
         <div class="span2 listhead-title">
+            <strong>@Messages("project.created")</strong>
+        </div>
+        <div class="span1 listhead-title">
             <strong>&nbsp;</strong>
         </div>
     </div>
