guest: Show guest mark at profile page

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -4652,6 +4652,23 @@ label.issue-item-row {
         }
     }
 
+    .guest-user {
+        background-color: rgba(255, 165, 0, 0.8);;
+        color: white;
+        text-align: center;
+        width: 20px;
+        border-radius: 3px;
+
+        .left-mark {
+            width: 10px;
+            writing-mode: vertical-rl;
+            text-orientation: upright;
+            font-size: 10px;
+            margin-left: 10px;
+            padding-top: 5px;
+        }
+    }
+
     .user-since {
         margin-top: 10px;
         padding:0 10px;
