login: Support custom login page messages

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -1442,6 +1442,13 @@
     }
 
     .alert h4 { font-size:15px; }
+
+    .email-verification-help {
+        font-weight: bold;
+        padding: 5px;
+        margin-bottom: 10px;
+        font-size: 16px;
+    }
 }
 .login-form-wrap {
     margin-top: 54px;
