--- a/app/views/project/members.scala.html
+++ b/app/views/project/members.scala.html
@@ -52,7 +52,7 @@
                     <img src="@User.findByLoginId(member.user.loginId).avatarUrl" width="64" height="64">
                 </a>
                 <div class="member-name">@member.user.name</div>
-                <div class="member-id">@{"@"}@member.user.loginId</div>
+                <div class="member-id">@{"@"}@member.user.loginId @if(member.user.isGuest){<span class="guest">GUEST</span>}</div>
                 <div class="member-setting">
                 @if(!project.isOwner(member.user)) {
                      <div class="btn-group" data-name="roleof-@member.user.loginId">
