comments: Change display name, author login id to author name

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -2907,6 +2907,7 @@ label.inline-list {
                         font-size:13px;
                         margin-right:5px;
                         color: #3f3e40;
+                        vertical-align: middle;
                     }
                     .ago {
                         color:#7F8C8D;
