--- a/app/assets/stylesheets/less/_responsive.less
+++ b/app/assets/stylesheets/less/_responsive.less
@@ -293,6 +293,7 @@
         .avatar-wrap {
             width: 24px !important;
             height: 24px !important;
+            margin-top: -5px;
         }
     }
 
