my-issues: Change favorite project listing style

--- a/app/assets/stylesheets/less/_override.less
+++ b/app/assets/stylesheets/less/_override.less
@@ -406,10 +406,16 @@ input:-webkit-autofill {
       padding: 0 10px;
       .project-name {
           max-width: 150px;
+          width: 100%;
       }
       .project-owner{
           padding-right: 0;
-          max-width: 60px;
+          max-width: 150px;
+          width: 100%;
+          text-align: right;
+      }
+      .flex-item {
+          flex-direction: column;
       }
   }
   .no-result {
