favorite: Support favrorite menu shortcut key, F

--- a/app/assets/stylesheets/less/_usermenu.less
+++ b/app/assets/stylesheets/less/_usermenu.less
@@ -776,5 +776,11 @@
   margin-left: 50px;
 }
 
+.shortcut-message {
+  color: white;
+  background-color: #87c98a;
+  padding: 3px 6px;
+  border-radius: 2px;
+}
 
 
