--- a/app/views/common/usermenu.scala.html
+++ b/app/views/common/usermenu.scala.html
@@ -88,7 +88,7 @@
         <li class="divider"></li>
         }
         <li class="gnb-usermenu-dropdown" id="sidebar-open-btn">
-            <a href="javascript:void(0);" class="gnb-dropdown-toggle">
+            <a href="javascript:void(0);" class="gnb-dropdown-toggle" data-toggle="tooltip" data-placement="bottom" title="@Messages("user.menu"), @Messages("title.shortcut") (F)">
                 <span class="avatar-wrap smaller">
                     <img src="@currentUser.avatarUrl(32)" />
                 </span>
