--- a/app/views/help/keymap.scala.html
+++ b/app/views/help/keymap.scala.html
@@ -1,22 +1,8 @@
 @**
-* Yobi, Project Hosting SW
+* Yona, 21st Century Project Hosting SW
 *
-* Copyright 2013 NAVER Corp.
-* http://yobi.io
-*
-* @author JiHan Kim
-*
-* Licensed under the Apache License, Version 2.0 (the "License");
-* you may not use this file except in compliance with the License.
-* You may obtain a copy of the License at
-*
-*   http://www.apache.org/licenses/LICENSE-2.0
-*
-* Unless required by applicable law or agreed to in writing, software
-* distributed under the License is distributed on an "AS IS" BASIS,
-* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-* See the License for the specific language governing permissions and
-* limitations under the License.
+* Copyright Yona & Yobi Authors & NAVER Corp & NAVER LABS Corp
+* https://yona.io
 **@
 @(section:String, project:Project)(implicit request: play.api.mvc.RequestHeader)
 
@@ -50,7 +36,7 @@
 
                 @if(project != null ) {
                     @if(project.vcs.equals("GIT")){
-                        <span class="ybtn ybtn-small">F</span>
+                        <span class="ybtn ybtn-small">P</span>
                         <span class="help-inline">@Messages("menu.pullRequest")</span><br>
                     }
                 }
@@ -103,8 +89,11 @@
                     <div class="span7">
                         <h5>@Messages("site")</h5>
 
-                        <span class="ybtn ybtn-small">P</span>
+                        <span class="ybtn ybtn-small">U</span>
                         <span class="help-inline">@Messages("userinfo.profile")</span><br>
+
+                        <span class="ybtn ybtn-small">F</span>
+                        <span class="help-inline">@Messages("user.menu")</span><br>
 
                         @if(isMac){
                         <span class="ybtn ybtn-small">CTRL</span> +
