--- a/app/views/issue/my_partial_search.scala.html
+++ b/app/views/issue/my_partial_search.scala.html
@@ -50,7 +50,7 @@
                 }
             }
         </div>
-        <div class="user-project-list myissues">
+        <div class="user-project-list myissues hide-in-mobile">
         @views.html.index.displayProjectsWithFavored("recentlyVisited", new util.ArrayList(),  UserApp.currentUser().getFavoriteProjects, true)
         </div>
     </div>
